--- a/add-property.html
+++ b/add-property.html
@@ -186,7 +186,7 @@
 								</div>
 								<div class="form-group">
 									<label>Property Description <span class="text-danger">*</span></label>
-									<textarea class="form-control" rows="4"></textarea>
+									<textDimension class="form-control" rows="4"></textDimension>
 								</div>
 								<div class="row">
 									<div class="form-group col-md-4">
@@ -208,22 +208,22 @@
 										</select>
 									</div>
 									<div class="form-group col-md-4">
-										<label>Location <span class="text-danger">*</span></label>
-										<input type="text" class="form-control" placeholder="Enter Location">
+										<label>Emplacement <span class="text-danger">*</span></label>
+										<input type="text" class="form-control" placeholder="Enter Emplacement">
 									</div>
 								</div>
 								<div class="row">
 									<div class="form-group col-md-4">
-										<label>Bedrooms <span class="text-danger">*</span></label>
-										<input type="text" class="form-control" placeholder="Enter Bedrooms">
+										<label>BedChambres <span class="text-danger">*</span></label>
+										<input type="text" class="form-control" placeholder="Enter BedChambres">
 									</div>
 									<div class="form-group col-md-4">
-										<label>Bathrooms <span class="text-danger">*</span></label>
-										<input type="text" class="form-control" placeholder="Enter Bathrooms">
+										<label>BathChambres <span class="text-danger">*</span></label>
+										<input type="text" class="form-control" placeholder="Enter BathChambres">
 									</div>
 									<div class="form-group col-md-4">
-										<label>Floors <span class="text-danger">*</span></label>
-										<input type="text" class="form-control" placeholder="Enter Floors">
+										<label>Pièces <span class="text-danger">*</span></label>
+										<input type="text" class="form-control" placeholder="Enter Pièces">
 									</div>
 								</div>
 								<div class="row">
@@ -232,7 +232,7 @@
 										<input type="text" class="form-control" placeholder="Enter Garages">
 									</div>
 									<div class="form-group col-md-4">
-										<label>Area <span class="text-danger">*</span></label>
+										<label>Dimension <span class="text-danger">*</span></label>
 										<input type="text" class="form-control" placeholder="sq ft">
 									</div>
 									<div class="form-group col-md-4">
@@ -256,8 +256,8 @@
 								</div>
 								<div class="row">
 									<div class="form-group col-md-6">
-										<label>Property ID <span class="text-danger">*</span></label>
-										<input type="text" class="form-control" placeholder="Enter Property ID">
+										<label>Numéro de la propriété<span class="text-danger">*</span></label>
+										<input type="text" class="form-control" placeholder="Enter Numéro de la propriété">
 									</div>
 									<div class="form-group col-md-6">
 										<label>Video URL</label>
@@ -267,9 +267,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="card property-features-add padding-card">
+						<div class="card property-Caractéristiques-add padding-card">
 							<div class="card-body">
-								<h5 class="card-title mb-4">Property Features</h5>
+								<h5 class="card-title mb-4">Property Caractéristiques</h5>
 								<div class="row">
 									<div class="col-md-4">
 										<div class="custom-control custom-checkbox">
@@ -340,7 +340,7 @@
 									<div class="col-md-4">
 										<div class="fuzone">
 											<div class="fu-text">
-												<span><i class="mdi mdi-image-area"></i> Click here or drop files to
+												<span><i class="mdi mdi-image-Dimension"></i> Click here or drop files to
 													upload</span>
 											</div>
 											<input class="upload" type="file">
@@ -349,7 +349,7 @@
 									<div class="col-md-4">
 										<div class="fuzone">
 											<div class="fu-text">
-												<span><i class="mdi mdi-image-area"></i> Click here or drop files to
+												<span><i class="mdi mdi-image-Dimension"></i> Click here or drop files to
 													upload</span>
 											</div>
 											<input class="upload" type="file">
@@ -358,7 +358,7 @@
 									<div class="col-md-4">
 										<div class="fuzone">
 											<div class="fu-text">
-												<span><i class="mdi mdi-image-area"></i> Click here or drop files to
+												<span><i class="mdi mdi-image-Dimension"></i> Click here or drop files to
 													upload</span>
 											</div>
 											<input class="upload" type="file">
@@ -369,7 +369,7 @@
 						</div>
 						<div class="card padding-card">
 							<div class="card-body">
-								<h5 class="card-title mb-4">Property Location</h5>
+								<h5 class="card-title mb-4">Property Emplacement</h5>
 								<div class="row">
 									<div class="form-group col-md-4">
 										<label>Address <span class="text-danger">*</span></label>
@@ -634,7 +634,7 @@
 			});
 			var contentString = '<div id="content">' +
 				'<div id="bodyContent">' +
-				'<div class="card card-list"><a href="#"><span class="badge badge-danger">For Sale</span><img class="card-img-top" src="img/list/1.png" alt="Card image cap"><div class="card-body"><h5 class="card-title">House in Kent Street</h5><h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> 127 Kent Sreet, Sydny, NEW 2000</h6><h2 class="text-success mb-0 mt-3">$130,000 <small>/month</small></h2></div><div class="card-footer"><span><i class="mdi mdi-sofa"></i> Beds : <strong>3</strong></span><span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>2</strong></span><span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>587 sq ft</strong></span></div></a> </div>' +
+				'<div class="card card-list"><a href="#"><span class="badge badge-danger">À vendre</span><img class="card-img-top" src="img/list/1.png" alt="Card image cap"><div class="card-body"><h5 class="card-title">House in Kent Street</h5><h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> 127 Kent Sreet, Sydny, NEW 2000</h6><h2 class="text-success mb-0 mt-3">$130,000 <small>/mois</small></h2></div><div class="card-footer"><span><i class="mdi mdi-sofa"></i> Lits : <strong>3</strong></span><span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>2</strong></span><span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>587 sq ft</strong></span></div></a> </div>' +
 				'</div>' +
 				'</div>';
 
