--- a/agency-profile.html
+++ b/agency-profile.html
@@ -196,19 +196,19 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="card card-list">
                         <a href="#">
-                            <span class="badge badge-success">For Sale</span>
+                            <span class="badge badge-success">À vendre</span>
                             <img class="card-img-top" src="img/list/1.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">House in Kent Street</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> 127
                                     Kent Sreet, Sydny, NEW 2000</h6>
                                 <h2 class="text-success mb-0 mt-3">
-                                    $130,000 <small>/month</small></h2>
+                                    $130,000 <small>/mois</small></h2>
                             </div>
                             <div class="card-footer">
-                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>3</strong></span>
-                                <span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>2</strong></span>
-                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>587 sq
+                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>3</strong></span>
+                                <span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>2</strong></span>
+                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>587 sq
                                         ft</strong></span>
                             </div>
                         </a>
@@ -217,19 +217,19 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="card card-list">
                         <a href="#">
-                            <span class="badge badge-secondary">For Rent</span>
+                            <span class="badge badge-secondary">À louer</span>
                             <img class="card-img-top" src="img/list/2.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Family House in Hudson</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
                                     Hoboken, NJ, USA</h6>
                                 <h2 class="text-success mb-0 mt-3">
-                                    $127,000 <small>/month</small></h2>
+                                    $127,000 <small>/mois</small></h2>
                             </div>
                             <div class="card-footer">
-                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>5</strong></span>
-                                <span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>3</strong></span>
-                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>300 sq
+                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>5</strong></span>
+                                <span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>3</strong></span>
+                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>300 sq
                                         ft</strong></span>
                             </div>
                         </a>
@@ -238,19 +238,19 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="card card-list">
                         <a href="#">
-                            <span class="badge badge-success">For Sale</span>
+                            <span class="badge badge-success">À vendre</span>
                             <img class="card-img-top" src="img/list/3.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Loft Above The City</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> Hope
                                     Street (Stop P), London SW11, UK</h6>
                                 <h2 class="text-success mb-0 mt-3">
-                                    $55,000 <small>/month</small></h2>
+                                    $55,000 <small>/mois</small></h2>
                             </div>
                             <div class="card-footer">
-                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>2</strong></span>
-                                <span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>1</strong></span>
-                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>100 sq
+                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>2</strong></span>
+                                <span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>1</strong></span>
+                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>100 sq
                                         ft</strong></span>
                             </div>
                         </a>
@@ -291,7 +291,7 @@
                     <div class="control-group form-group">
                         <div class="controls">
                             <label>Message <span class="text-danger">*</span></label>
-                            <textarea rows="10" cols="100" class="form-control"></textarea>
+                            <textDimension rows="10" cols="100" class="form-control"></textDimension>
                         </div>
                     </div>
                     <button type="submit" class="btn btn-success">Send Message</button>
