--- a/blog-single.html
+++ b/blog-single.html
@@ -196,7 +196,7 @@
                                 vulputate, porta nibh non, ultricies erat. Nulla facilisi. </p>
                         </div>
                         <div class="card-footer">
-                            <div class="footer-social"><span>Share</span> : &nbsp;
+                            <div class="footer-social"><span>Partagez</span> : &nbsp;
                                 <a href="#"><i class="mdi mdi-facebook"></i></a>
                                 <a href="#"><i class="mdi mdi-twitter"></i></a>
                                 <a href="#"><i class="mdi mdi-instagram"></i></a>
@@ -206,7 +206,7 @@
                     </div>
                     <div class="card padding-card reviews-card">
                         <div class="card-body">
-                            <h5 class="card-title mb-4">3 Reviews</h5>
+                            <h5 class="card-title mb-4">3 commentaires</h5>
                             <div class="media mb-4">
                                 <img class="d-flex mr-3 rounded" src="img/user/1.jpg" alt="">
                                 <div class="media-body">
@@ -304,7 +304,7 @@
                                 <div class="control-group form-group">
                                     <div class="controls">
                                         <label>Review <span class="text-danger">*</span></label>
-                                        <textarea rows="10" cols="100" class="form-control"></textarea>
+                                        <textDimension rows="10" cols="100" class="form-control"></textDimension>
                                     </div>
                                 </div>
                                 <button type="submit" class="btn btn-success">SUBMIT</button>
@@ -315,7 +315,7 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="card sidebar-card">
                         <div class="card-body">
-                            <h5 class="card-title mb-4">Blog Search</h5>
+                            <h5 class="card-title mb-4">Blog Recherche</h5>
                             <div class="input-group">
                                 <input class="form-control" placeholder="Type and hit enter"
                                     aria-label="Recipient's username" aria-describedby="basic-addon2" type="text">
@@ -367,7 +367,7 @@
                     </div>
                     <div class="card sidebar-card">
                         <div class="card-body">
-                            <h5 class="card-title mb-4">Featured Properties</h5>
+                            <h5 class="card-title mb-4">Propriétés en vedette</h5>
                             <div id="featured-properties" class="carousel slide" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#featured-properties" data-slide-to="0" class="active"></li>
@@ -377,7 +377,7 @@
                                     <div class="carousel-item active">
                                         <div class="card card-list">
                                             <a href="#">
-                                                <span class="badge badge-success">For Sale</span>
+                                                <span class="badge badge-success">À vendre</span>
                                                 <img class="card-img-top" src="img/list/1.png" alt="Card image cap">
                                                 <div class="card-body">
                                                     <h5 class="card-title">House in Kent Street</h5>
@@ -385,7 +385,7 @@
                                                             class="mdi mdi-home-map-marker"></i> 127 Kent Sreet, Sydny,
                                                         NEW 2000</h6>
                                                     <h2 class="text-success mb-0 mt-3">
-                                                        $130,000 <small>/month</small></h2>
+                                                        $130,000 <small>/mois</small></h2>
                                                 </div>
                                             </a>
                                         </div>
@@ -393,14 +393,14 @@
                                     <div class="carousel-item">
                                         <div class="card card-list">
                                             <a href="#">
-                                                <span class="badge badge-secondary">For Rent</span>
+                                                <span class="badge badge-secondary">À louer</span>
                                                 <img class="card-img-top" src="img/list/2.png" alt="Card image cap">
                                                 <div class="card-body">
                                                     <h5 class="card-title">Family House in Hudson</h5>
                                                     <h6 class="card-subtitle mb-2 text-muted"><i
                                                             class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
                                                     <h2 class="text-success mb-0 mt-3">
-                                                        $127,000 <small>/month</small></h2>
+                                                        $127,000 <small>/mois</small></h2>
                                                 </div>
                                             </a>
                                         </div>
