--- a/contact.html
+++ b/contact.html
@@ -213,7 +213,7 @@
 					<div class="control-group form-group">
 						<div class="controls">
 							<label>Message <span class="text-danger">*</span></label>
-							<textarea rows="10" cols="100" class="form-control"></textarea>
+							<textDimension rows="10" cols="100" class="form-control"></textDimension>
 						</div>
 					</div>
 					<button type="submit" class="btn btn-success">Send Message</button>
