--- a/faq.html
+++ b/faq.html
@@ -180,7 +180,7 @@
                                             <a class="collapsed" data-toggle="collapse" data-parent="#accordion"
                                                 href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                                 <i class="mdi mdi-arrow-right-bold-box"></i> Where can I find market
-                                                research reports?
+                                                reRecherche reports?
                                             </a>
                                         </h5>
                                     </div>
