--- a/favorite-properties.html
+++ b/favorite-properties.html
@@ -182,7 +182,7 @@
                             <div class="card card-list card-list-view">
                                 <div class="row no-gutters">
                                     <div class="col-lg-5 col-md-5">
-                                        <span class="badge badge-success">For Sale</span>
+                                        <span class="badge badge-success">À vendre</span>
                                         <img class="card-img-top" src="img/list/1.png" alt="Card image cap">
                                     </div>
                                     <div class="col-lg-7 col-md-7">
@@ -194,13 +194,13 @@
                                                     class="mdi mdi-home-map-marker"></i> 127 Kent Sreet, Sydny, NEW 2000
                                             </h6>
                                             <h2 class="text-success mb-0 mt-3">
-                                                $130,000 <small>/month</small></h2>
+                                                $130,000 <small>/mois</small></h2>
                                         </div>
                                         <div class="card-footer">
-                                            <span><i class="mdi mdi-sofa"></i> Beds : <strong>3</strong></span>
-                                            <span><i class="mdi mdi-scale-bathroom"></i> Baths :
+                                            <span><i class="mdi mdi-sofa"></i> Lits : <strong>3</strong></span>
+                                            <span><i class="mdi mdi-scale-bathroom"></i> Douches :
                                                 <strong>2</strong></span>
-                                            <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>587 sq
+                                            <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>587 sq
                                                     ft</strong></span>
                                         </div>
                                     </div>
@@ -211,7 +211,7 @@
                             <div class="card card-list card-list-view">
                                 <div class="row no-gutters">
                                     <div class="col-lg-5 col-md-5">
-                                        <span class="badge badge-secondary">For Rent</span>
+                                        <span class="badge badge-secondary">À louer</span>
                                         <img class="card-img-top" src="img/list/2.png" alt="Card image cap">
                                     </div>
                                     <div class="col-lg-7 col-md-7">
@@ -222,13 +222,13 @@
                                             <h6 class="card-subtitle mb-2 text-muted"><i
                                                     class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
                                             <h2 class="text-success mb-0 mt-3">
-                                                $127,000 <small>/month</small></h2>
+                                                $127,000 <small>/mois</small></h2>
                                         </div>
                                         <div class="card-footer">
-                                            <span><i class="mdi mdi-sofa"></i> Beds : <strong>5</strong></span>
-                                            <span><i class="mdi mdi-scale-bathroom"></i> Baths :
+                                            <span><i class="mdi mdi-sofa"></i> Lits : <strong>5</strong></span>
+                                            <span><i class="mdi mdi-scale-bathroom"></i> Douches :
                                                 <strong>3</strong></span>
-                                            <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>300 sq
+                                            <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>300 sq
                                                     ft</strong></span>
                                         </div>
                                     </div>
@@ -239,7 +239,7 @@
                             <div class="card card-list card-list-view">
                                 <div class="row no-gutters">
                                     <div class="col-lg-5 col-md-5">
-                                        <span class="badge badge-danger">For Sale</span>
+                                        <span class="badge badge-danger">À vendre</span>
                                         <img class="card-img-top" src="img/list/4.png" alt="Card image cap">
                                     </div>
                                     <div class="col-lg-7 col-md-7">
@@ -251,13 +251,13 @@
                                                     class="mdi mdi-home-map-marker"></i> 250-260 3rd St, Hoboken, NJ
                                                 07030, USA</h6>
                                             <h2 class="text-success mb-0 mt-3">
-                                                $25,000 <small>/month</small></h2>
+                                                $25,000 <small>/mois</small></h2>
                                         </div>
                                         <div class="card-footer">
-                                            <span><i class="mdi mdi-sofa"></i> Beds : <strong>6</strong></span>
-                                            <span><i class="mdi mdi-scale-bathroom"></i> Baths :
+                                            <span><i class="mdi mdi-sofa"></i> Lits : <strong>6</strong></span>
+                                            <span><i class="mdi mdi-scale-bathroom"></i> Douches :
                                                 <strong>4</strong></span>
-                                            <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>987 sq
+                                            <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>987 sq
                                                     ft</strong></span>
                                         </div>
                                     </div>
@@ -268,7 +268,7 @@
                             <div class="card card-list card-list-view">
                                 <div class="row no-gutters">
                                     <div class="col-lg-5 col-md-5">
-                                        <span class="badge badge-success">For Sale</span>
+                                        <span class="badge badge-success">À vendre</span>
                                         <img class="card-img-top" src="img/list/3.png" alt="Card image cap">
                                     </div>
                                     <div class="col-lg-7 col-md-7">
@@ -280,13 +280,13 @@
                                                     class="mdi mdi-home-map-marker"></i> Hope Street (Stop P), London
                                                 SW11, UK</h6>
                                             <h2 class="text-success mb-0 mt-3">
-                                                $55,000 <small>/month</small></h2>
+                                                $55,000 <small>/mois</small></h2>
                                         </div>
                                         <div class="card-footer">
-                                            <span><i class="mdi mdi-sofa"></i> Beds : <strong>2</strong></span>
-                                            <span><i class="mdi mdi-scale-bathroom"></i> Baths :
+                                            <span><i class="mdi mdi-sofa"></i> Lits : <strong>2</strong></span>
+                                            <span><i class="mdi mdi-scale-bathroom"></i> Douches :
                                                 <strong>1</strong></span>
-                                            <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>100 sq
+                                            <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>100 sq
                                                     ft</strong></span>
                                         </div>
                                     </div>
