--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
             <div class="col-md-4">
               <div class="input-group">
                 <div class="input-group-addon"><i class="mdi mdi-map-marker-multiple"></i></div>
-                <input class="form-control" placeholder="Enter Location, Project or Landmark" type="text">
+                <input class="form-control" placeholder="Enter Emplacement, Project or Landmark" type="text">
               </div>
             </div>
             <div class="col-md-3">
               <div class="input-group">
                 <div class="input-group-addon"><i class="mdi mdi-google-maps"></i></div>
                 <select class="form-control select2 no-radius">
-                  <option value="">Locations</option>
+                  <option value="">Emplacements</option>
                   <option value="AL">Alabama</option>
                   <option value="AK">Alaska</option>
                   <option value="AZ">Arizona</option>
