--- a/index2.html
+++ b/index2.html
@@ -141,8 +141,8 @@
 						<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 							<div class="input-group">
 								<div class="input-group-addon"><i class="mdi mdi-map-marker-multiple"></i></div>
-								<select class="form-control select2" name="location">
-									<option disabled="" selected="">Any Location</option>
+								<select class="form-control select2" name="Emplacement">
+									<option disabled="" selected="">Emplacement</option>
 									<option>Australia</option>
 									<option>Brazil</option>
 									<option>Cambodia</option>
@@ -162,8 +162,8 @@
 						<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 							<div class="input-group">
 								<div class="input-group-addon"><i class="mdi mdi-city"></i></div>
-								<select class="form-control select2" name="location">
-									<option disabled="" selected="">Any Status</option>
+								<select class="form-control select2" name="Emplacement">
+									<option disabled="" selected="">Statut</option>
 									<option>Heigh </option>
 									<option>Midium</option>
 									<option>Normal</option>
@@ -173,8 +173,8 @@
 						<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 							<div class="input-group">
 								<div class="input-group-addon"><i class="mdi mdi-home-modern"></i></div>
-								<select class="form-control select2" name="location">
-									<option disabled="" selected="">Any Type</option>
+								<select class="form-control select2" name="Emplacement">
+									<option disabled="" selected="">Type</option>
 									<option>Property Types</option>
 									<option value="">House/Villa</option>
 									<option value="">Flat</option>
@@ -190,8 +190,8 @@
 						<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 							<div class="input-group">
 								<div class="input-group-addon"><i class="mdi mdi-hotel"></i></div>
-								<select class="form-control select2" name="location">
-									<option disabled="" selected="">Min. Bedrooms</option>
+								<select class="form-control select2" name="Emplacement">
+									<option disabled="" selected="">Chambre à coucher minimums</option>
 									<option>1</option>
 									<option>2</option>
 									<option>3</option>
@@ -208,8 +208,8 @@
 						<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 							<div class="input-group">
 								<div class="input-group-addon"><i class="mdi mdi-magnify-minus-outline"></i></div>
-								<select class="form-control select2" name="location">
-									<option disabled="" selected="">Min Size</option>
+								<select class="form-control select2" name="Emplacement">
+									<option disabled="" selected="">Taille minimale</option>
 									<option>100</option>
 									<option>200</option>
 									<option>300</option>
@@ -226,8 +226,8 @@
 						<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 							<div class="input-group">
 								<div class="input-group-addon"><i class="mdi mdi-magnify-plus-outline"></i></div>
-								<select class="form-control select2" name="location">
-									<option disabled="" selected="">Max Size</option>
+								<select class="form-control select2" name="Emplacement">
+									<option disabled="" selected="">Taille maximale</option>
 									<option>1000</option>
 									<option>2000</option>
 									<option>3000</option>
@@ -244,8 +244,8 @@
 						<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 							<div class="input-group">
 								<div class="input-group-addon"><i class="mdi mdi-hot-tub"></i></div>
-								<select class="form-control select2" name="location">
-									<option disabled="" selected="">Baths</option>
+								<select class="form-control select2" name="Emplacement">
+									<option disabled="" selected="">Douches</option>
 									<option>1</option>
 									<option>2</option>
 									<option>3</option>
@@ -262,7 +262,7 @@
 						<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 							<div class="input-group">
 								<button type="submit"
-									class="btn btn-success btn-block no-radius font-weight-bold">SEARCH</button>
+									class="btn btn-success btn-block no-radius font-weight-bold">Recherche</button>
 							</div>
 						</div>
 					</div>
@@ -282,19 +282,19 @@
 				<div class="col-lg-4 col-md-4">
 					<div class="card card-list">
 						<a href="#">
-							<span class="badge badge-success">For Sale</span>
+							<span class="badge badge-success">À vendre</span>
 							<img class="card-img-top" src="img/list/1.png" alt="Card image cap">
 							<div class="card-body">
 								<h5 class="card-title">House in Kent Street</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> 127
 									Kent Sreet, Sydny, NEW 2000</h6>
 								<h2 class="text-success mb-0 mt-3">
-									$130,000 <small>/month</small></h2>
+									$130,000 <small>/mois</small></h2>
 							</div>
 							<div class="card-footer">
-								<span><i class="mdi mdi-sofa"></i> Beds : <strong>3</strong></span>
-								<span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>2</strong></span>
-								<span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>587 sq
+								<span><i class="mdi mdi-sofa"></i> Lits : <strong>3</strong></span>
+								<span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>2</strong></span>
+								<span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>587 sq
 										ft</strong></span>
 							</div>
 						</a>
@@ -303,19 +303,19 @@
 				<div class="col-lg-4 col-md-4">
 					<div class="card card-list">
 						<a href="#">
-							<span class="badge badge-secondary">For Rent</span>
+							<span class="badge badge-secondary">À louer</span>
 							<img class="card-img-top" src="img/list/2.png" alt="Card image cap">
 							<div class="card-body">
 								<h5 class="card-title">Family House in Hudson</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
 									Hoboken, NJ, USA</h6>
 								<h2 class="text-success mb-0 mt-3">
-									$127,000 <small>/month</small></h2>
+									$127,000 <small>/mois</small></h2>
 							</div>
 							<div class="card-footer">
-								<span><i class="mdi mdi-sofa"></i> Beds : <strong>5</strong></span>
-								<span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>3</strong></span>
-								<span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>300 sq
+								<span><i class="mdi mdi-sofa"></i> Lits : <strong>5</strong></span>
+								<span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>3</strong></span>
+								<span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>300 sq
 										ft</strong></span>
 							</div>
 						</a>
@@ -324,19 +324,19 @@
 				<div class="col-lg-4 col-md-4">
 					<div class="card card-list">
 						<a href="#">
-							<span class="badge badge-success">For Sale</span>
+							<span class="badge badge-success">À vendre</span>
 							<img class="card-img-top" src="img/list/3.png" alt="Card image cap">
 							<div class="card-body">
 								<h5 class="card-title">Loft Above The City</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> Hope
 									Street (Stop P), London SW11, UK</h6>
 								<h2 class="text-success mb-0 mt-3">
-									$55,000 <small>/month</small></h2>
+									$55,000 <small>/mois</small></h2>
 							</div>
 							<div class="card-footer">
-								<span><i class="mdi mdi-sofa"></i> Beds : <strong>2</strong></span>
-								<span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>1</strong></span>
-								<span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>100 sq
+								<span><i class="mdi mdi-sofa"></i> Lits : <strong>2</strong></span>
+								<span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>1</strong></span>
+								<span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>100 sq
 										ft</strong></span>
 							</div>
 						</a>
@@ -347,19 +347,19 @@
 				<div class="col-lg-4 col-md-4">
 					<div class="card card-list">
 						<a href="#">
-							<span class="badge badge-danger">For Sale</span>
+							<span class="badge badge-danger">À vendre</span>
 							<img class="card-img-top" src="img/list/4.png" alt="Card image cap">
 							<div class="card-body">
 								<h5 class="card-title">Store Space Greenville</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
 									250-260 3rd St, Hoboken, NJ 07030, USA</h6>
 								<h2 class="text-success mb-0 mt-3">
-									$25,000 <small>/month</small></h2>
+									$25,000 <small>/mois</small></h2>
 							</div>
 							<div class="card-footer">
-								<span><i class="mdi mdi-sofa"></i> Beds : <strong>6</strong></span>
-								<span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>4</strong></span>
-								<span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>987 sq
+								<span><i class="mdi mdi-sofa"></i> Lits : <strong>6</strong></span>
+								<span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>4</strong></span>
+								<span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>987 sq
 										ft</strong></span>
 							</div>
 						</a>
@@ -368,19 +368,19 @@
 				<div class="col-lg-4 col-md-4">
 					<div class="card card-list">
 						<a href="#">
-							<span class="badge badge-warning">For Rent</span>
+							<span class="badge badge-warning">À louer</span>
 							<img class="card-img-top" src="img/list/5.png" alt="Card image cap">
 							<div class="card-body">
 								<h5 class="card-title">Villa in Melbourne</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> NJ
 									07305, USA</h6>
 								<h2 class="text-success mb-0 mt-3">
-									$12,000 <small>/month</small></h2>
+									$12,000 <small>/mois</small></h2>
 							</div>
 							<div class="card-footer">
-								<span><i class="mdi mdi-sofa"></i> Beds : <strong>8</strong></span>
-								<span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>4</strong></span>
-								<span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>120 sq
+								<span><i class="mdi mdi-sofa"></i> Lits : <strong>8</strong></span>
+								<span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>4</strong></span>
+								<span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>120 sq
 										ft</strong></span>
 							</div>
 						</a>
@@ -389,19 +389,19 @@
 				<div class="col-lg-4 col-md-4">
 					<div class="card card-list">
 						<a href="#">
-							<span class="badge badge-info">For Rent</span>
+							<span class="badge badge-info">À louer</span>
 							<img class="card-img-top" src="img/list/6.png" alt="Card image cap">
 							<div class="card-body">
 								<h5 class="card-title">Villa on Hollywood Boulev</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> The
 									Village, Jersey City, NJ 07302, USA</h6>
 								<h2 class="text-success mb-0 mt-3">
-									$356, 000 <small>/month</small></h2>
+									$356, 000 <small>/mois</small></h2>
 							</div>
 							<div class="card-footer">
-								<span><i class="mdi mdi-sofa"></i> Beds : <strong>1</strong></span>
-								<span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>3</strong></span>
-								<span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>187 sq
+								<span><i class="mdi mdi-sofa"></i> Lits : <strong>1</strong></span>
+								<span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>3</strong></span>
+								<span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>187 sq
 										ft</strong></span>
 							</div>
 						</a>
@@ -791,7 +791,7 @@
 			});
 			var contentString = '<div id="content">' +
 				'<div id="bodyContent">' +
-				'<div class="card card-list"><a href="#"><span class="badge badge-success">For Sale</span><img class="card-img-top" src="img/list/4.png" alt="Card image cap"><div class="card-body"><h5 class="card-title">House in Kent Street</h5><h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> 127 Kent Sreet, Sydny, NEW 2000</h6><h2 class="text-success mb-0 mt-3">$130,000 <small>/month</small></h2></div><div class="card-footer"><span><i class="mdi mdi-sofa"></i> Beds : <strong>3</strong></span><span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>2</strong></span><span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>587 sq ft</strong></span></div></a> </div>' +
+				'<div class="card card-list"><a href="#"><span class="badge badge-success">À vendre</span><img class="card-img-top" src="img/list/4.png" alt="Card image cap"><div class="card-body"><h5 class="card-title">House in Kent Street</h5><h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> 127 Kent Sreet, Sydny, NEW 2000</h6><h2 class="text-success mb-0 mt-3">$130,000 <small>/mois</small></h2></div><div class="card-footer"><span><i class="mdi mdi-sofa"></i> Lits : <strong>3</strong></span><span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>2</strong></span><span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>587 sq ft</strong></span></div></a> </div>' +
 				'</div>' +
 				'</div>';
 
