--- a/my-properties.html
+++ b/my-properties.html
@@ -182,7 +182,7 @@
                                 <a href="#">
                                     <div class="row no-gutters">
                                         <div class="col-lg-5 col-md-5">
-                                            <span class="badge badge-success">For Sale</span>
+                                            <span class="badge badge-success">À vendre</span>
                                             <img class="card-img-top" src="img/list/1.png" alt="Card image cap">
                                         </div>
                                         <div class="col-lg-7 col-md-7">
@@ -194,13 +194,13 @@
                                                         class="mdi mdi-home-map-marker"></i> 127 Kent Sreet, Sydny, NEW
                                                     2000</h6>
                                                 <h2 class="text-success mb-0 mt-3">
-                                                    $130,000 <small>/month</small></h2>
+                                                    $130,000 <small>/mois</small></h2>
                                             </div>
                                             <div class="card-footer">
-                                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>3</strong></span>
-                                                <span><i class="mdi mdi-scale-bathroom"></i> Baths :
+                                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>3</strong></span>
+                                                <span><i class="mdi mdi-scale-bathroom"></i> Douches :
                                                     <strong>2</strong></span>
-                                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>587 sq
+                                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>587 sq
                                                         ft</strong></span>
                                             </div>
                                         </div>
@@ -213,7 +213,7 @@
                                 <a href="#">
                                     <div class="row no-gutters">
                                         <div class="col-lg-5 col-md-5">
-                                            <span class="badge badge-secondary">For Rent</span>
+                                            <span class="badge badge-secondary">À louer</span>
                                             <img class="card-img-top" src="img/list/2.png" alt="Card image cap">
                                         </div>
                                         <div class="col-lg-7 col-md-7">
@@ -224,13 +224,13 @@
                                                 <h6 class="card-subtitle mb-2 text-muted"><i
                                                         class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
                                                 <h2 class="text-success mb-0 mt-3">
-                                                    $127,000 <small>/month</small></h2>
+                                                    $127,000 <small>/mois</small></h2>
                                             </div>
                                             <div class="card-footer">
-                                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>5</strong></span>
-                                                <span><i class="mdi mdi-scale-bathroom"></i> Baths :
+                                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>5</strong></span>
+                                                <span><i class="mdi mdi-scale-bathroom"></i> Douches :
                                                     <strong>3</strong></span>
-                                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>300 sq
+                                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>300 sq
                                                         ft</strong></span>
                                             </div>
                                         </div>
@@ -243,7 +243,7 @@
                                 <a href="#">
                                     <div class="row no-gutters">
                                         <div class="col-lg-5 col-md-5">
-                                            <span class="badge badge-danger">For Sale</span>
+                                            <span class="badge badge-danger">À vendre</span>
                                             <img class="card-img-top" src="img/list/4.png" alt="Card image cap">
                                         </div>
                                         <div class="col-lg-7 col-md-7">
@@ -255,13 +255,13 @@
                                                         class="mdi mdi-home-map-marker"></i> 250-260 3rd St, Hoboken, NJ
                                                     07030, USA</h6>
                                                 <h2 class="text-success mb-0 mt-3">
-                                                    $25,000 <small>/month</small></h2>
+                                                    $25,000 <small>/mois</small></h2>
                                             </div>
                                             <div class="card-footer">
-                                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>6</strong></span>
-                                                <span><i class="mdi mdi-scale-bathroom"></i> Baths :
+                                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>6</strong></span>
+                                                <span><i class="mdi mdi-scale-bathroom"></i> Douches :
                                                     <strong>4</strong></span>
-                                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>987 sq
+                                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>987 sq
                                                         ft</strong></span>
                                             </div>
                                         </div>
@@ -274,7 +274,7 @@
                                 <a href="#">
                                     <div class="row no-gutters">
                                         <div class="col-lg-5 col-md-5">
-                                            <span class="badge badge-warning">For Rent</span>
+                                            <span class="badge badge-warning">À louer</span>
                                             <img class="card-img-top" src="img/list/5.png" alt="Card image cap">
                                         </div>
                                         <div class="col-lg-7 col-md-7">
@@ -285,13 +285,13 @@
                                                 <h6 class="card-subtitle mb-2 text-muted"><i
                                                         class="mdi mdi-home-map-marker"></i> NJ 07305, USA</h6>
                                                 <h2 class="text-success mb-0 mt-3">
-                                                    $12,000 <small>/month</small></h2>
+                                                    $12,000 <small>/mois</small></h2>
                                             </div>
                                             <div class="card-footer">
-                                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>8</strong></span>
-                                                <span><i class="mdi mdi-scale-bathroom"></i> Baths :
+                                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>8</strong></span>
+                                                <span><i class="mdi mdi-scale-bathroom"></i> Douches :
                                                     <strong>4</strong></span>
-                                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>120 sq
+                                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>120 sq
                                                         ft</strong></span>
                                             </div>
                                         </div>
@@ -304,7 +304,7 @@
                                 <a href="#">
                                     <div class="row no-gutters">
                                         <div class="col-lg-5 col-md-5">
-                                            <span class="badge badge-info">For Rent</span>
+                                            <span class="badge badge-info">À louer</span>
                                             <img class="card-img-top" src="img/list/6.png" alt="Card image cap">
                                         </div>
                                         <div class="col-lg-7 col-md-7">
@@ -316,13 +316,13 @@
                                                         class="mdi mdi-home-map-marker"></i> The Village, Jersey City,
                                                     NJ 07302, USA</h6>
                                                 <h2 class="text-success mb-0 mt-3">
-                                                    $356, 000 <small>/month</small></h2>
+                                                    $356, 000 <small>/mois</small></h2>
                                             </div>
                                             <div class="card-footer">
-                                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>1</strong></span>
-                                                <span><i class="mdi mdi-scale-bathroom"></i> Baths :
+                                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>1</strong></span>
+                                                <span><i class="mdi mdi-scale-bathroom"></i> Douches :
                                                     <strong>3</strong></span>
-                                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>187 sq
+                                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>187 sq
                                                         ft</strong></span>
                                             </div>
                                         </div>
@@ -335,7 +335,7 @@
                                 <a href="#">
                                     <div class="row no-gutters">
                                         <div class="col-lg-5 col-md-5">
-                                            <span class="badge badge-success">For Sale</span>
+                                            <span class="badge badge-success">À vendre</span>
                                             <img class="card-img-top" src="img/list/3.png" alt="Card image cap">
                                         </div>
                                         <div class="col-lg-7 col-md-7">
@@ -347,13 +347,13 @@
                                                         class="mdi mdi-home-map-marker"></i> Hope Street (Stop P),
                                                     London SW11, UK</h6>
                                                 <h2 class="text-success mb-0 mt-3">
-                                                    $55,000 <small>/month</small></h2>
+                                                    $55,000 <small>/mois</small></h2>
                                             </div>
                                             <div class="card-footer">
-                                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>2</strong></span>
-                                                <span><i class="mdi mdi-scale-bathroom"></i> Baths :
+                                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>2</strong></span>
+                                                <span><i class="mdi mdi-scale-bathroom"></i> Douches :
                                                     <strong>1</strong></span>
-                                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>100 sq
+                                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>100 sq
                                                         ft</strong></span>
                                             </div>
                                         </div>
