--- a/property-single-gallery.html
+++ b/property-single-gallery.html
@@ -159,19 +159,19 @@
 						<h6><i class="mdi mdi-home-map-marker"></i> 250-260 3rd St, Hoboken, NJ 07030, USA</h6>
 					</div>
 					<div class="col-lg-4 col-md-4 text-right">
-						<h6 class="mt-2">For Rent</h6>
-						<h2 class="text-success">$25,000 <small>/month</small></h2>
+						<h6 class="mt-2">À louer</h6>
+						<h2 class="text-success">$25,000 <small>/mois</small></h2>
 					</div>
 				</div>
 				<hr>
 				<div class="row">
 					<div class="col-lg-8 col-md-8">
-						<p class="mt-1 mb-0"><strong>Property ID</strong> : 533566 &nbsp;&nbsp; <strong>Add to
+						<p class="mt-1 mb-0"><strong>Numéro de la propriété</strong> : 533566 &nbsp;&nbsp; <strong>Add to
 								favorites</strong> <i class="mdi mdi-heart"></i></p>
 					</div>
 					<div class="col-lg-4 col-md-4 text-right">
 						<div class="footer-social">
-							<span>Share :</span> &nbsp;
+							<span>Partagez :</span> &nbsp;
 							<a href="#"><i class="mdi mdi-facebook"></i></a>
 							<a href="#"><i class="mdi mdi-twitter"></i></a>
 							<a href="#"><i class="mdi mdi-instagram"></i></a>
@@ -219,22 +219,22 @@
 								<div class="col-lg-4 col-md-4">
 									<div class="list-icon">
 										<i class="mdi mdi-move-resize-variant"></i>
-										<strong>Area:</strong>
+										<strong>Dimension:</strong>
 										<p class="mb-0">1270 aq ft</p>
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-4">
 									<div class="list-icon">
 										<i class="mdi mdi-sofa"></i>
-										<strong>Beds:</strong>
-										<p class="mb-0">4 Bedrooms</p>
+										<strong>Lits:</strong>
+										<p class="mb-0">4 BedChambres</p>
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-4">
 									<div class="list-icon">
 										<i class="mdi mdi-hot-tub"></i>
-										<strong>Baths:</strong>
-										<p class="mb-0">2 Bathrooms</p>
+										<strong>Douches:</strong>
+										<p class="mb-0">2 BathChambres</p>
 									</div>
 								</div>
 							</div>
@@ -242,15 +242,15 @@
 								<div class="col-lg-4 col-md-4">
 									<div class="list-icon">
 										<i class="mdi mdi-garage"></i>
-										<strong>Rooms:</strong>
-										<p class="mb-0">6 Rooms</p>
+										<strong>Chambres:</strong>
+										<p class="mb-0">6 Chambres</p>
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-4">
 									<div class="list-icon">
 										<i class="mdi mdi-floor-plan"></i>
-										<strong>Floors:</strong>
-										<p class="mb-0">4 Floors</p>
+										<strong>Pièces:</strong>
+										<p class="mb-0">4 Pièces</p>
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-4">
@@ -275,7 +275,7 @@
 					</div>
 					<div class="card padding-card">
 						<div class="card-body">
-							<h5 class="card-title mb-3">Features</h5>
+							<h5 class="card-title mb-3">Caractéristiques</h5>
 							<div class="row">
 								<div class="col-lg-4 col-md-4">
 									<ul class="sidebar-card-list">
@@ -330,7 +330,7 @@
 					</div>
 					<div class="card padding-card">
 						<div class="card-body">
-							<h5 class="card-title mb-3">Location</h5>
+							<h5 class="card-title mb-3">Emplacement</h5>
 							<div class="row mb-3">
 								<div class="col-lg-6 col-md-6">
 									<p><strong class="text-dark">Address :</strong> 1200 Petersham Town</p>
@@ -352,7 +352,7 @@
 					</div>
 					<div class="card padding-card reviews-card">
 						<div class="card-body">
-							<h5 class="card-title mb-4">3 Reviews</h5>
+							<h5 class="card-title mb-4">3 commentaires</h5>
 							<div class="media mb-4">
 								<img class="d-flex mr-3 rounded-circle" src="img/user/1.jpg" alt="">
 								<div class="media-body">
@@ -462,7 +462,7 @@
 								<div class="control-group form-group">
 									<div class="controls">
 										<label>Review <span class="text-danger">*</span></label>
-										<textarea rows="10" cols="100" class="form-control"></textarea>
+										<textDimension rows="10" cols="100" class="form-control"></textDimension>
 									</div>
 								</div>
 								<button type="submit" class="btn btn-success">Send Message</button>
@@ -473,7 +473,7 @@
 				<div class="col-lg-4 col-md-4">
 					<div class="card sidebar-card">
 						<div class="card-body">
-							<h5 class="card-title mb-4">About Agent</h5>
+							<h5 class="card-title mb-4">A propos de l'agent</h5>
 							<div id="featured-properties">
 								<div class="carousel-inner">
 									<div class="carousel-item active">
@@ -500,7 +500,7 @@
 					</div>
 					<div class="card sidebar-card">
 						<div class="card-body">
-							<h5 class="card-title mb-4">Request a Showing</h5>
+							<h5 class="card-title mb-4">Demander une visite</h5>
 							<form name="sentMessage">
 								<div class="control-group form-group">
 									<div class="controls">
@@ -524,7 +524,7 @@
 								<div class="control-group form-group">
 									<div class="controls">
 										<label>Message <span class="text-danger">*</span></label>
-										<textarea rows="5" cols="50" class="form-control"></textarea>
+										<textDimension rows="5" cols="50" class="form-control"></textDimension>
 									</div>
 								</div>
 								<button type="submit" class="btn btn-success btn-block">SEND REQUEST</button>
@@ -533,7 +533,7 @@
 					</div>
 					<div class="card sidebar-card">
 						<div class="card-body">
-							<h5 class="card-title mb-4">Featured Properties</h5>
+							<h5 class="card-title mb-4">Propriétés en vedette</h5>
 							<div id="featured-properties" class="carousel slide" data-ride="carousel">
 								<ol class="carousel-indicators">
 									<li data-target="#featured-properties" data-slide-to="0" class="active"></li>
@@ -543,7 +543,7 @@
 									<div class="carousel-item active">
 										<div class="card card-list">
 											<a href="#">
-												<span class="badge badge-success">For Sale</span>
+												<span class="badge badge-success">À vendre</span>
 												<img class="card-img-top" src="img/list/1.png" alt="Card image cap">
 												<div class="card-body">
 													<h5 class="card-title">House in Kent Street</h5>
@@ -551,7 +551,7 @@
 															class="mdi mdi-home-map-marker"></i> 127 Kent Sreet, Sydny,
 														NEW 2000</h6>
 													<h2 class="text-success mb-0 mt-3">
-														$130,000 <small>/month</small></h2>
+														$130,000 <small>/mois</small></h2>
 												</div>
 											</a>
 										</div>
@@ -559,14 +559,14 @@
 									<div class="carousel-item">
 										<div class="card card-list">
 											<a href="#">
-												<span class="badge badge-secondary">For Rent</span>
+												<span class="badge badge-secondary">À louer</span>
 												<img class="card-img-top" src="img/list/2.png" alt="Card image cap">
 												<div class="card-body">
 													<h5 class="card-title">Family House in Hudson</h5>
 													<h6 class="card-subtitle mb-2 text-muted"><i
 															class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
 													<h2 class="text-success mb-0 mt-3">
-														$127,000 <small>/month</small></h2>
+														$127,000 <small>/mois</small></h2>
 												</div>
 											</a>
 										</div>
@@ -577,7 +577,7 @@
 					</div>
 					<div class="card sidebar-card">
 						<div class="card-body">
-							<h5 class="card-title mb-4">Mortage Calculator</h5>
+							<h5 class="card-title mb-4">Calculerur d'hypothèque</h5>
 							<form name="sentMessage">
 								<div class="control-group form-group">
 									<div class="controls">
@@ -603,7 +603,7 @@
 										<input type="text" placeholder="%" class="form-control" required>
 									</div>
 								</div>
-								<button type="submit" class="btn btn-success btn-block">CALCULATE</button>
+								<button type="submit" class="btn btn-success btn-block">Calculer</button>
 							</form>
 						</div>
 					</div>
@@ -622,19 +622,19 @@
 				<div class="col-lg-4 col-md-4">
 					<div class="card card-list">
 						<a href="#">
-							<span class="badge badge-success">For Sale</span>
+							<span class="badge badge-success">À vendre</span>
 							<img class="card-img-top" src="img/list/1.png" alt="Card image cap">
 							<div class="card-body">
 								<h5 class="card-title">House in Kent Street</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> 127
 									Kent Sreet, Sydny, NEW 2000</h6>
 								<h2 class="text-success mb-0 mt-3">
-									$130,000 <small>/month</small></h2>
+									$130,000 <small>/mois</small></h2>
 							</div>
 							<div class="card-footer">
-								<span><i class="mdi mdi-sofa"></i> Beds : <strong>3</strong></span>
-								<span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>2</strong></span>
-								<span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>587 sq
+								<span><i class="mdi mdi-sofa"></i> Lits : <strong>3</strong></span>
+								<span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>2</strong></span>
+								<span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>587 sq
 										ft</strong></span>
 							</div>
 						</a>
@@ -643,19 +643,19 @@
 				<div class="col-lg-4 col-md-4">
 					<div class="card card-list">
 						<a href="#">
-							<span class="badge badge-secondary">For Rent</span>
+							<span class="badge badge-secondary">À louer</span>
 							<img class="card-img-top" src="img/list/2.png" alt="Card image cap">
 							<div class="card-body">
 								<h5 class="card-title">Family House in Hudson</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
 									Hoboken, NJ, USA</h6>
 								<h2 class="text-success mb-0 mt-3">
-									$127,000 <small>/month</small></h2>
+									$127,000 <small>/mois</small></h2>
 							</div>
 							<div class="card-footer">
-								<span><i class="mdi mdi-sofa"></i> Beds : <strong>5</strong></span>
-								<span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>3</strong></span>
-								<span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>300 sq
+								<span><i class="mdi mdi-sofa"></i> Lits : <strong>5</strong></span>
+								<span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>3</strong></span>
+								<span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>300 sq
 										ft</strong></span>
 							</div>
 						</a>
@@ -664,19 +664,19 @@
 				<div class="col-lg-4 col-md-4">
 					<div class="card card-list">
 						<a href="#">
-							<span class="badge badge-success">For Sale</span>
+							<span class="badge badge-success">À vendre</span>
 							<img class="card-img-top" src="img/list/3.png" alt="Card image cap">
 							<div class="card-body">
 								<h5 class="card-title">Loft Above The City</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> Hope
 									Street (Stop P), London SW11, UK</h6>
 								<h2 class="text-success mb-0 mt-3">
-									$55,000 <small>/month</small></h2>
+									$55,000 <small>/mois</small></h2>
 							</div>
 							<div class="card-footer">
-								<span><i class="mdi mdi-sofa"></i> Beds : <strong>2</strong></span>
-								<span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>1</strong></span>
-								<span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>100 sq
+								<span><i class="mdi mdi-sofa"></i> Lits : <strong>2</strong></span>
+								<span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>1</strong></span>
+								<span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>100 sq
 										ft</strong></span>
 							</div>
 						</a>
@@ -908,7 +908,7 @@
 			});
 			var contentString = '<div id="content">' +
 				'<div id="bodyContent">' +
-				'<div class="card card-list"><a href="#"><span class="badge badge-success">For Sale</span><img class="card-img-top" src="img/list/2.png" alt="Card image cap"><div class="card-body"><h5 class="card-title">House in Kent Street</h5><h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> 127 Kent Sreet, Sydny, NEW 2000</h6><h2 class="text-success mb-0 mt-3">$130,000 <small>/month</small></h2></div><div class="card-footer"><span><i class="mdi mdi-sofa"></i> Beds : <strong>3</strong></span><span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>2</strong></span><span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>587 sq ft</strong></span></div></a> </div>' +
+				'<div class="card card-list"><a href="#"><span class="badge badge-success">À vendre</span><img class="card-img-top" src="img/list/2.png" alt="Card image cap"><div class="card-body"><h5 class="card-title">House in Kent Street</h5><h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> 127 Kent Sreet, Sydny, NEW 2000</h6><h2 class="text-success mb-0 mt-3">$130,000 <small>/mois</small></h2></div><div class="card-footer"><span><i class="mdi mdi-sofa"></i> Lits : <strong>3</strong></span><span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>2</strong></span><span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>587 sq ft</strong></span></div></a> </div>' +
 				'</div>' +
 				'</div>';
 
