--- a/about.html
+++ b/about.html
@@ -135,10 +135,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1 class="mt-0 mb-3 text-white">About Us</h1>
+                    <h1 class="mt-0 mb-3 text-white">À propos de nous</h1>
                     <div class="breadcrumbs">
                         <p class="mb-0 text-white"><a class="text-white" href="#">Home</a>  /  <span
-                                class="text-success">About Us</span></p>
+                                class="text-success">À propos de nous</span></p>
                     </div>
                 </div>
             </div>
