--- a/index1.html
+++ b/index1.html
@@ -162,7 +162,7 @@
                         <div class="col-md-4">
                             <div class="input-group">
                                 <div class="input-group-addon"><i class="mdi mdi-map-marker-multiple"></i></div>
-                                <input class="form-control" placeholder="Enter Location, Project or Landmark"
+                                <input class="form-control" placeholder="Enter Emplacement, Project or Landmark"
                                     type="text">
                             </div>
                         </div>
@@ -170,7 +170,7 @@
                             <div class="input-group">
                                 <div class="input-group-addon"><i class="mdi mdi-google-maps"></i></div>
                                 <select class="form-control select2 no-radius">
-                                    <option value="">Locations</option>
+                                    <option value="">Emplacements</option>
                                     <option value="AL">Alabama</option>
                                     <option value="AK">Alaska</option>
                                     <option value="AZ">Arizona</option>
@@ -243,7 +243,7 @@
                         </div>
                         <div class="col-md-2">
                             <button type="submit"
-                                class="btn btn-success btn-block no-radius font-weight-bold">SEARCH</button>
+                                class="btn btn-success btn-block no-radius font-weight-bold">Recherche</button>
                         </div>
                     </div>
                 </form>
@@ -262,19 +262,19 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="card card-list">
                         <a href="#">
-                            <span class="badge badge-success">For Sale</span>
+                            <span class="badge badge-success">À vendre</span>
                             <img class="card-img-top" src="img/list/1.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">House in Kent Street</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> 127
                                     Kent Sreet, Sydny, NEW 2000</h6>
                                 <h2 class="text-success mb-0 mt-3">
-                                    $130,000 <small>/month</small></h2>
+                                    $130,000 <small>/mois</small></h2>
                             </div>
                             <div class="card-footer">
-                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>3</strong></span>
-                                <span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>2</strong></span>
-                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>587 sq
+                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>3</strong></span>
+                                <span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>2</strong></span>
+                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>587 sq
                                         ft</strong></span>
                             </div>
                         </a>
@@ -283,19 +283,19 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="card card-list">
                         <a href="#">
-                            <span class="badge badge-secondary">For Rent</span>
+                            <span class="badge badge-secondary">À louer</span>
                             <img class="card-img-top" src="img/list/2.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Family House in Hudson</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
                                     Hoboken, NJ, USA</h6>
                                 <h2 class="text-success mb-0 mt-3">
-                                    $127,000 <small>/month</small></h2>
+                                    $127,000 <small>/mois</small></h2>
                             </div>
                             <div class="card-footer">
-                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>5</strong></span>
-                                <span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>3</strong></span>
-                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>300 sq
+                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>5</strong></span>
+                                <span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>3</strong></span>
+                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>300 sq
                                         ft</strong></span>
                             </div>
                         </a>
@@ -304,19 +304,19 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="card card-list">
                         <a href="#">
-                            <span class="badge badge-success">For Sale</span>
+                            <span class="badge badge-success">À vendre</span>
                             <img class="card-img-top" src="img/list/3.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Loft Above The City</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> Hope
                                     Street (Stop P), London SW11, UK</h6>
                                 <h2 class="text-success mb-0 mt-3">
-                                    $55,000 <small>/month</small></h2>
+                                    $55,000 <small>/mois</small></h2>
                             </div>
                             <div class="card-footer">
-                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>2</strong></span>
-                                <span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>1</strong></span>
-                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>100 sq
+                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>2</strong></span>
+                                <span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>1</strong></span>
+                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>100 sq
                                         ft</strong></span>
                             </div>
                         </a>
@@ -327,19 +327,19 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="card card-list">
                         <a href="#">
-                            <span class="badge badge-danger">For Sale</span>
+                            <span class="badge badge-danger">À vendre</span>
                             <img class="card-img-top" src="img/list/4.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Store Space Greenville</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
                                     250-260 3rd St, Hoboken, NJ 07030, USA</h6>
                                 <h2 class="text-success mb-0 mt-3">
-                                    $25,000 <small>/month</small></h2>
+                                    $25,000 <small>/mois</small></h2>
                             </div>
                             <div class="card-footer">
-                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>6</strong></span>
-                                <span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>4</strong></span>
-                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>987 sq
+                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>6</strong></span>
+                                <span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>4</strong></span>
+                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>987 sq
                                         ft</strong></span>
                             </div>
                         </a>
@@ -348,19 +348,19 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="card card-list">
                         <a href="#">
-                            <span class="badge badge-warning">For Rent</span>
+                            <span class="badge badge-warning">À louer</span>
                             <img class="card-img-top" src="img/list/5.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Villa in Melbourne</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> NJ
                                     07305, USA</h6>
                                 <h2 class="text-success mb-0 mt-3">
-                                    $12,000 <small>/month</small></h2>
+                                    $12,000 <small>/mois</small></h2>
                             </div>
                             <div class="card-footer">
-                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>8</strong></span>
-                                <span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>4</strong></span>
-                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>120 sq
+                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>8</strong></span>
+                                <span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>4</strong></span>
+                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>120 sq
                                         ft</strong></span>
                             </div>
                         </a>
@@ -369,19 +369,19 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="card card-list">
                         <a href="#">
-                            <span class="badge badge-info">For Rent</span>
+                            <span class="badge badge-info">À louer</span>
                             <img class="card-img-top" src="img/list/6.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Villa on Hollywood Boulev</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> The
                                     Village, Jersey City, NJ 07302, USA</h6>
                                 <h2 class="text-success mb-0 mt-3">
-                                    $356, 000 <small>/month</small></h2>
+                                    $356, 000 <small>/mois</small></h2>
                             </div>
                             <div class="card-footer">
-                                <span><i class="mdi mdi-sofa"></i> Beds : <strong>1</strong></span>
-                                <span><i class="mdi mdi-scale-bathroom"></i> Baths : <strong>3</strong></span>
-                                <span><i class="mdi mdi-move-resize-variant"></i> Area : <strong>187 sq
+                                <span><i class="mdi mdi-sofa"></i> Lits : <strong>1</strong></span>
+                                <span><i class="mdi mdi-scale-bathroom"></i> Douches : <strong>3</strong></span>
+                                <span><i class="mdi mdi-move-resize-variant"></i> Dimension : <strong>187 sq
                                         ft</strong></span>
                             </div>
                         </a>
