--- a/user-profile.html
+++ b/user-profile.html
@@ -197,12 +197,12 @@
                                     <input type="text" class="form-control" placeholder="Enter Phone">
                                 </div>
                                 <div class="form-group">
-                                    <label>Location <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" placeholder="Enter Locations">
+                                    <label>Emplacement <span class="text-danger">*</span></label>
+                                    <input type="text" class="form-control" placeholder="Enter Emplacements">
                                 </div>
                                 <div class="form-group">
                                     <label>About Me <span class="text-danger">*</span></label>
-                                    <textarea rows="10" cols="100" class="form-control"></textarea>
+                                    <textDimension rows="10" cols="100" class="form-control"></textDimension>
                                 </div>
                             </div>
                         </div>
